--- a/kubernetes_deployments/charts/webapp/templates/ingress.yaml
+++ b/kubernetes_deployments/charts/webapp/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ruslan-ingress
+  name: {{ .Values.ingressName }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -13,6 +13,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: ruslan-internal-service
+            name: {{ .Values.internalServiceName }}
             port:
               number: 80
