--- a/kubernetes_deployments/charts/webapp/values.yaml
+++ b/kubernetes_deployments/charts/webapp/values.yaml
@@ -3,4 +3,4 @@ internalServiceName: webapp-internal-service
 webAppName: my-fastapi
 replicaCount: 2
 containerPort: 8088
-image: rivallar/hw20:latest
+image: rivallar/hw20:20250425133123
