--- a/argocd/application.yml
+++ b/argocd/application.yml
@@ -26,6 +26,7 @@ spec:
   project: default
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
+    targetRevision: 71.0.0
     chart: kube-prometheus-stack
     helm:
       releaseName: monitoring
