--- a/argocd/application.yml
+++ b/argocd/application.yml
@@ -26,7 +26,7 @@ spec:
   project: default
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 71.0.0
+    targetRevision: 45.31.0
     chart: kube-prometheus-stack
     helm:
       releaseName: monitoring
@@ -59,6 +59,10 @@ spec:
     server: https://kubernetes.default.svc
     namespace: default
   syncPolicy:
+    syncOptions:
+      - ServerSideApply=true
+      - CreateNamespace=true
     automated:
       selfHeal: true
       prune: true
+      
